--- a/kolenvaltrade/package.json
+++ b/kolenvaltrade/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "history": "^4.10.1",
     "jwt-decode": "^2.2.0",
     "react": "^16.11.0",
+    "react-bootstrap": "^1.0.0-beta.14",
+    "react-bootstrap-multiselect": "^2.4.1",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-select": "^3.0.8",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
